general overflow fix

--- a/assets/scss/layouts/_general.scss
+++ b/assets/scss/layouts/_general.scss
@@ -14,3 +14,8 @@
 	@include max-width-scale();
 	@include outer-container();
 }
+
+.site {
+	overflow-x: hidden;
+	width: 100%;
+}
